--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,4 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
-
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
@@ -7,6 +6,10 @@
     "types": [
       "node"
     ]
+  },
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "strictTemplates": true
   },
   "files": [
     "src/main.ts",
