--- a/package.json
+++ b/package.json
@@ -11,36 +11,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.4",
+    "@angular/animations": "~11.2.6",
     "@angular/cdk": "^10.2.7",
-    "@angular/common": "~10.0.4",
-    "@angular/compiler": "~10.0.4",
-    "@angular/core": "~10.0.4",
-    "@angular/forms": "~10.0.4",
-    "@angular/localize": "~10.0.4",
+    "@angular/common": "~11.2.6",
+    "@angular/compiler": "~11.2.6",
+    "@angular/core": "~11.2.6",
+    "@angular/forms": "~11.2.6",
+    "@angular/localize": "~11.2.6",
     "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "~10.0.4",
-    "@angular/platform-browser-dynamic": "~10.0.4",
-    "@angular/router": "~10.0.4",
+    "@angular/platform-browser": "~11.2.6",
+    "@angular/platform-browser-dynamic": "~11.2.6",
+    "@angular/router": "~11.2.6",
     "@auth0/angular-jwt": "^5.0.2",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "ngx-lightbox": "^2.0.0",
     "rxjs": "~6.5.5",
+    "screenfull": "^3.3.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1002.1",
-    "@angular/cli": "~10.0.3",
-    "@angular/compiler-cli": "~10.0.4",
+    "@angular-devkit/build-angular": "^0.1102.12",
+    "@angular/cli": "^11.2.5",
+    "@angular/compiler-cli": "~11.2.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^14.0.4",
     "codelyzer": "^6.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.2.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
@@ -48,6 +50,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~4.1.5"
   }
 }
