--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "ngx-lightbox": "^2.0.0",
+    "postcss": "^8.2.15",
     "rxjs": "~6.5.5",
     "screenfull": "^3.3.0",
     "tslib": "^2.1.0",
@@ -38,7 +39,7 @@
     "@angular/compiler-cli": "~11.2.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^14.0.4",
+    "@types/node": "^15.0.2",
     "codelyzer": "^6.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
